fixing on mobile

--- a/src/scss/mainpage.scss
+++ b/src/scss/mainpage.scss
@@ -2,3 +2,13 @@
   list-style-type: square;
   padding-left: 25px;
 }
+
+@media (max-width: 768px) {
+  #contact-button {
+    margin-top: 30px;
+  }
+
+  #button-scrolltop {
+    display: none;
+  }
+}
