--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1397,7 +1397,7 @@ blockquote:after {
 /*Portfolio Sec*/
 .portfolio-sec .bottom-links {
   display: block;
-  padding: 11px 30px;
+  padding: 11px 0 11px 30px;
   text-align: right;
   font-size: 22px; }
 .portfolio-sec .bottom-links a:first-child {
